--- a/templates/index.html
+++ b/templates/index.html
@@ -122,7 +122,7 @@
                                                 d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" />
                                         </svg>
                                         <input type="file" class="hidden" accept="image/*" id="imageInput">
-                                        <span class="mt-2 text-base">Drop your image here or click to upload</span>
+                                        <span class="mt-2 text-base">Click here to upload image</span>
                                     </label>
                                 </div>
                             </div>
@@ -287,7 +287,7 @@
                         </div>
                     </div>
                     <div class="slide-in bg-white rounded-xl overflow-hidden shadow-lg">
-                        <img src="{{ url_for('static', filename='images/26.png') }}" alt="Root Rot"
+                        <img src="{{ url_for('static', filename='images/26.jpeg') }}" alt="Root Rot"
                             class="w-full h-48 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-semibold mb-2">Root Rot</h3>
@@ -313,7 +313,7 @@
                                 <p class="text-sm text-gray-500">Garden Enthusiast</p>
                             </div>
                         </div>
-                        <p class="text-gray-600">"This app saved my tomato plants! Quick and accurate disease detection
+                        <p class="text-gray-600">"This app saved my Apple plants! Quick and accurate disease detection
                             helped me take immediate action."</p>
                     </div>
                     <div class="slide-in bg-white p-6 rounded-xl shadow-lg">
@@ -356,8 +356,8 @@
                         <img src="{{ url_for('static', filename='images/gourav.jpg') }}" alt="Team Member 3"
                             class="mx-auto w-48 h-48 rounded-full object-cover">
                         <h3 class="mt-4 text-xl font-semibold text-gray-900">Gourav Lohar</h3>
-                        <p class="text-gray-600">AI/ML Specialist</p>
-                        <a href="https://linkedin.com/in/johndoe" target="_blank"
+                        <!-- <p class="text-gray-600"></p> -->
+                        <a href="https://www.linkedin.com/in/gouravlohar/" target="_blank"
                             class="inline-block mt-4 text-green-600 hover:text-green-800 transition-colors">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-6 h-6"
                                 viewBox="0 0 24 24">
@@ -372,8 +372,8 @@
                         <img src="{{ url_for('static', filename='images/aditya.jpg') }}" alt="Team Member 3"
                             class="mx-auto w-48 h-48 rounded-full object-cover">
                         <h3 class="mt-4 text-xl font-semibold text-gray-900">Aditya Chauhan</h3>
-                        <p class="text-gray-600">Frontend Developer</p>
-                        <a href="https://linkedin.com/in/janesmith" target="_blank"
+                        <!-- <p class="text-gray-600">Frontend Developer</p> -->
+                        <a href="https://www.linkedin.com/in/i-am-aditya-chauhan/" target="_blank"
                             class="inline-block mt-4 text-green-600 hover:text-green-800 transition-colors">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-6 h-6"
                                 viewBox="0 0 24 24">
@@ -388,8 +388,8 @@
                         <img src="{{ url_for('static', filename='images/tushar.jpg') }}" alt="Team Member 3"
                             class="mx-auto w-48 h-48 rounded-full object-cover">
                         <h3 class="mt-4 text-xl font-semibold text-gray-900">Tushar Kumar</h3>
-                        <p class="text-gray-600">Data Scientist</p>
-                        <a href="https://linkedin.com/in/michaellee" target="_blank"
+                        <!-- <p class="text-gray-600">Data Scientist</p> -->
+                        <a href="https://www.linkedin.com/in/tusharkumar08/" target="_blank"
                             class="inline-block mt-4 text-green-600 hover:text-green-800 transition-colors">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-6 h-6"
                                 viewBox="0 0 24 24">
@@ -403,8 +403,8 @@
                         <img src="{{ url_for('static', filename='images/surjadeep.jpg') }}" alt="Team Member 3"
                             class="mx-auto w-48 h-48 rounded-full object-cover">
                         <h3 class="mt-4 text-xl font-semibold text-gray-900">Surjadeep Raut</h3>
-                        <p class="text-gray-600">Data Scientist</p>
-                        <a href="https://linkedin.com/in/michaellee" target="_blank"
+                        <!-- <p class="text-gray-600">Data Scientist</p> -->
+                        <a href="https://www.linkedin.com/in/surjadeep-raut-b284bbab/" target="_blank"
                             class="inline-block mt-4 text-green-600 hover:text-green-800 transition-colors">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-6 h-6"
                                 viewBox="0 0 24 24">
